--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
     <head>
         <title>Mi primera web</title>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
-        <!Encabezado>
         <h1>MI PRIMERA WEB</h1>
 
         <hr/>
-
+        <h2>
+           Esta es una prueba para una segunda instantatea 
+        </h2>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
             the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
